unpackaged/main/default/objects/CPQ_Product__c/CPQ_Product__c.object-meta.xml
<CustomObject>
    <label>CPQ Product</label>
    <nameField>
        <displayFormat>CPQP-{000000}</displayFormat>
        <label>CPQ Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>