unpackaged/main/default/objects/CPQ_Product__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>