unpackaged/main/default/objects/CPQ_Product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Set</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Switches</fullName>
            </value>
            <value>
                <fullName>Routers</fullName>
            </value>
            <value>
                <fullName>WAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>