unpackaged/main/default/objects/CPQ_Product__c/fields/Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Sell_Price__c</fullName>
    <label>Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>